--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-
 <head>
     <!-- basic -->
     <meta charset="utf-8">
@@ -9,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>jackpiro</title>
+    <title>Inovar Armeria</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -49,7 +47,7 @@
                             <div class="full">
                                 <div class="center-desk">
                                     <div class="logo">
-                                        <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                                        <a href="index.html"><img src="images/logo.png" alt="#" width="269px" height="54px" /></a>
                                     </div>
                                 </div>
                             </div>
@@ -395,7 +393,7 @@
             </div>
             <div class="copyright">
                 <div class="container">
-                    <p>© 2019 All Rights Reserved. <a href="https://html.design/">Free html Templates</a></p>
+                    <p>© 2021 Todos os direitos reservados. <a href="#">Gabriel e Christopher WebServices.</a></p>
                 </div>
             </div>
         </div>
