--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                                         <li><a href="#"><img src="icon/lin(2).png"></a></li>
                                          <li><a href="#"><img src="icon/instagram.png"></a></li>
                                     </ul>
-                                    <a href="index.html"> <img src="images/logo.png" alt="logo"></a>
+                                    <a href="index.html"> <img src="images/logo2.png" alt="logo"></a>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
