--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             
                                         <ul class="top_icon">
                                             <li class="button_login"> <a href="#">Login</a> </li>
-                                            <li> <a href="#about">Signup</a> </li>
+                                            <li> <a href="#about">Cadastro</a> </li>
                                             <li class="mean-last">
                                              <a href="#"><img src="images/search_icon.png" alt="#" /></a>
                                             </li>
@@ -78,11 +78,11 @@
                                 <div class="limit-box">
                                     <nav class="main-menu">
                                         <ul class="menu-area-main">
-                                            <li class="active"> <a href="#game">Game</a> </li>
-                                            <li> <a href="#software">Software</a> </li>
-                                            <li> <a href="#about">About</a> </li>
-                                            <li> <a href="#testimonial">Testimonial</a> </li>
-                                            <li> <a href="#contact">Contact</a> </li>
+                                            <li class="active"> <a href="#game">Inicio</a> </li>
+                                            <li> <a href="#software">Competições</a> </li>
+                                            <li> <a href="#about">Vídeo</a> </li>
+                                            <li> <a href="#testimonial">Sobre Nós</a> </li>
+                                            <li> <a href="#contact">Contato</a> </li>
                                            
                                         </ul>
                                     </nav>
@@ -91,9 +91,8 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 ">
                                 <div class="text-bg">
-                                    <h1>amazing<br> 3d game</h1>
-                                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br> tempor incididunt ut</span>
-                                    <a href="#">download</a>
+                                    <h1>O seu Clube de tiros.</h1>
+                                    <span>Venha fazer parte desse time, descubra novas emoções, novos talentos e seja o melhor!</span>
                                 </div>
                             </div>
                              <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 ">
@@ -117,7 +116,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>Our Games</h2>
+                        <h2>Serviços</h2>
                     </div>
                 </div>
             </div>
@@ -127,16 +126,15 @@
 
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                             <div class="two-box">
-                                <figure><img src="images/our-image1.jpg" alt="#" /></figure>
+                                <figure><img src="images/our-image111111.jpg" alt="#" /></figure>
                             </div>
                         </div>
 
                         <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
 
                             <div class="Games">
-                                <h3>Angry Birds</h3>
+                                <h3>Customização Total</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                                <a href="#">Free Download</a>
                             </div>
                         </div>
                     </div>
@@ -146,16 +144,15 @@
 
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12">
                             <div class="two-box">
-                                <figure><img src="images/our-image2.jpg" alt="#" /></figure>
+                                <figure><img src="images/our-image1.png" alt="#" width="334px" height="247px" /></figure>
                             </div>
                         </div>
 
                         <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
 
                             <div class="Games">
-                                <h3>Sanke</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                                <a href="#">Free Download</a>
+                                <h3>Gravações a Laser</h3>
+                                <p>Ótimo para quem quer customizar arma de fogo registrar sua marca, ou um desenho especial.</p>
                             </div>
                         </div>
                     </div>
@@ -172,9 +169,9 @@
                         <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12">
 
                             <div class="Games">
-                                <h3>Cricket</h3>
+                                <h3>Revestimentos</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et </p>
-                                <a href="#">Free Download</a>
+                                <a href="#">Ler mais</a>
                             </div>
                         </div>
                     </div>
@@ -190,7 +187,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>Software</h2>
+                        <h2>Projetos de Competições</h2>
                     </div>
                 </div>
             </div>
@@ -207,7 +204,6 @@
                  <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 border_right">
                      <div class="box_text">
                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-                         <a href="#">Read more</a>
                      </div>
                  </div> 
             </div>
@@ -215,13 +211,13 @@
     </div>
     <!-- end We are -->
 
-    <!-- about  -->
+    <!-- Video  -->
     <div id="about" class="about">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>About Our Game</h2>
+                        <h2>Faça parte dessa equipe!</h2>
                     </div>
                 </div>
             </div>
@@ -240,13 +236,13 @@
     </div>
     <!-- end abouts -->
 
-    <!-- testimonial -->
+    <!-- Sobre Nós -->
     <div id="testimonial" class="testimonial">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="titlepage">
-                        <h2>Testimonial</h2>
+                        <h2>Sobre Nós</h2>
                     </div>
                 </div>
             </div>
@@ -294,20 +290,24 @@
 
                     <form class="contact_bg">
                         <div class="row">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h2><b>Contato</b></h2>
+                                </div>
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                <input class="contactus" placeholder="Name" type="text" name="Name">
+                                <input class="contactus" placeholder="Nome" type="text" name="Name">
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                <input class="contactus" placeholder="Phone" type="text" name="Email">
+                                <input class="contactus" placeholder="Número de telefone" type="text" name="Email">
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                 <input class="contactus" placeholder="Email" type="text" name="Email">
                             </div>
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
+                                <textarea class="textarea" placeholder="Mensagem" type="text" name="Message"></textarea>
                             </div>
                             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                                <button class="send">Send</button>
+                                <button class="send">Enviar</button>
                             </div>
                         </div>
                     </form>
@@ -325,12 +325,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Newsletter</h2>
+                        <h2>Receber Notícias!!</h2>
                     </div>
                     <div class="col-md-10 offset-md-1">
                         <form class="news">
-                            <input class="newslatter" placeholder="Enter Your Email" type="text" name="Enter Your Email">
-                            <button class="submit">Subscribe</button>
+                            <input class="newslatter" placeholder="Insira seu email" type="text" name="Enter Your Email">
+                            <button class="submit">Inscrever</button>
                         </form>
                     </div>
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
@@ -343,45 +343,47 @@
                                         <li><a href="#"><img src="icon/lin(2).png"></a></li>
                                          <li><a href="#"><img src="icon/instagram.png"></a></li>
                                     </ul>
-                                    <a href="index.html"> <img src="images/logo2.png" alt="logo"></a>
+                                     <img src="images/logo2.png" alt="logo">
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="address">
-                                    <h3>Quick links</h3>
-                                    <ul class="Menu_footer">
-                                        <li class="active"> <img src="images/3.png" alt="#"> <a href="#game">Game</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#software">Software</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#about">About</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#testimonial"> Testimonial</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#contact">Contact</a> </li>
+                                    <h3>Links Rápidos</h3>
+                                    <ul class="loca">
+                                        <li class="active"> <img src="images/3.png" alt="#"> <a href="#game">Inicio</a> </li>
+                                        <li><img src="images/3.png" alt="#"> <a href="#software">Competições</a> </li>
+                                        <li><img src="images/3.png" alt="#"> <a href="#about">Video</a> </li>
+                                        <li><img src="images/3.png" alt="#"> <a href="#testimonial">Sobre nós</a> </li>
+                                        <li><img src="images/3.png" alt="#"> <a href="#contact">Contato</a> </li>
                                     </ul>
                                 </div>
                             </div>
+
                             <div class="col-lg-3 col-md-6 col-sm-6">
                                 <div class="address">
-                                    <h3>downloded</h3>
-                                    <ul class="Links_footer">
-                                        <li class="active"><img src="images/3.png" alt="#"> <a href="#">Lorem Ipsum </a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#">Simply random</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#">Roots in a</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#"> Piece</a> </li>
-                                        <li><img src="images/3.png" alt="#"> <a href="#">Classical</a> </li>
-                                    </ul>
+                                    <h3>Endereço</h3>
+                                    <ul class="loca">
+                                        <li>
+                                            <a href="#"><img src="icon/loc.png" alt="#" /></a>CEP: 12900-000
+                                            <br>São Paulo - SP
+                                            <br>Centro
+                                            <br>Rua Logradouro, 1000
+                                            <br>10º Andar - Sala 1001
+                                        </li>
                                 </div>
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6 ">
                                 <div class="address">
-                                    <h3>Contact us </h3>
+                                    <h3>Contatos</h3>
                                     <ul class="loca">
                                         <li>
-                                            <a href="#"><img src="icon/loc.png" alt="#" /></a>London 145
-                                            <br>United Kingdom </li>
+                                            <a href="#"><img src="icon/email.png" alt="#" /></a>contato@inovararmeria.com</li>
                                         <li>
-                                            <a href="#"><img src="icon/email.png" alt="#" /></a>demo@gmail.com </li>
-                                        <li>
-                                            <a href="#"><img src="icon/call.png" alt="#" /></a>+12586954775 </li>
+                                            <a href="#"><img src="icon/call.png" alt="#" /></a>
+                                            (11) 92001-0533<br>
+                                            (11) 94715-9042
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
