Atualizando links do whatsapp

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                             <li class="button_login"> <a href="#">Login</a> </li>
                                             <li> <a href="#about">Cadastro</a> </li>
                                             <li class="mean-last">
-                                             <a href="#"><img src="images/search_icon.png" alt="#" /></a>
+                                             <a href="https://beacons.page/ghaz" target="_BLANK"><img src="icon/wpp.png"/></a>
                                             </li>
                                         </ul>
                         </div>
@@ -340,8 +340,7 @@
                                     <ul class="social_link">
                                         <li><a href="#"><img src="icon/fb.png"></a></li>
                                         <li><a href="#"><img src="icon/tw.png"></a></li>
-                                        <li><a href="#"><img src="icon/lin(2).png"></a></li>
-                                         <li><a href="#"><img src="icon/instagram.png"></a></li>
+                                         <li><a href="https://beacons.page/ghaz" target="_BLANK"><img src="icon/wpp.png"></a></li>
                                     </ul>
                                      <img src="images/logo2.png" alt="logo">
                                 </div>
