--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
      <title>Digital Trend HTML Template</title>
-<!--
+     <!--
 
 DIGITAL TREND
 
@@ -25,68 +26,80 @@ https://templatemo.com/tm-538-digital-trend
 
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/templatemo-digital-trend.css">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+          rel="stylesheet">
 
 </head>
+
 <body>
 
      <!-- MENU BAR -->
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-              <i class="fa fa-line-chart"></i>
-              Digital Trend
-            </a>
+     <nav class="navbar navbar-expand-lg">
+          <div class="container">
+               <div class="row">
+                    <div class="col-md-6">
+                         <a class="" href="index.html">
+                              <img src="images/logo.png" style="max-width: 40%" alt="logo">
+                         </a>
+                    </div>
+                    <div class="col-md-6">
+                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon"></span>
+                         </button>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="#about" class="nav-link smoothScroll">Studio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#project" class="nav-link smoothScroll">Our Works</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="blog.html" class="nav-link">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+                         <div class="collapse navbar-collapse" id="navbarNav">
+                              <ul class="navbar-nav ml-auto">
+                                   <li class="nav-item">
+                                        <a href="#about" class="nav-link smoothScroll">Sobre</a>
+                                   </li>
+                                   <li class="nav-item">
+                                        <a href="#project" class="nav-link smoothScroll">Nosso Serviços</a>
+                                   </li>
+                                   <li class="nav-item">
+                                        <a href="blog.html" class="nav-link">Blog</a>
+                                   </li>
+                                   <li class="nav-item">
+                                        <a href="contact.html" class="nav-link contact">Contact</a>
+                                   </li>
+                              </ul>
+                         </div>
+                    </div>
+               </div>
+          </div>
+     </nav>
 
 
      <!-- HERO -->
      <section class="hero hero-bg d-flex justify-content-center align-items-center">
-               <div class="container">
-                    <div class="row">
+          <div class="layer"></div>
+          <!-- <img src="images/bg_home.jpg" class="img-fluid" alt="working girl"> -->
+          <div class="container">
+               <div class="row">
 
-                        <div class="col-lg-6 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
-                              <div class="hero-text">
+                    <div
+                         class="col-lg-12 col-md-10 col-12 d-flex flex-column justify-content-center align-items-center">
+                         <div class="hero-text">
 
-                                   <h1 class="text-white" data-aos="fade-up">We are ready for your digital marketing</h1>
-
-                                   <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Let us discuss together!</a>
-
-                                   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-phone mr-2"></i> +99 080 070 4224</strong>
+                              <h1 class="text-white" data-aos="fade-up">Excelência em custumização e manutenção de
+                                   armas </h1>
+                              <div width="50%">
+                                   <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up"
+                                        data-aos-delay="100">ENTRE EM CONTATO</a>
                               </div>
-                        </div>
-
-                        <div class="col-lg-6 col-12">
-                          <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
-
-                            <img src="images/working-girl.png" class="img-fluid" alt="working girl">
-                          </div>
-                        </div>
-
+                         </div>
                     </div>
+
+                    <div class="col-lg-6 col-12">
+                         <div class="hero-image" data-aos="fade-up" data-aos-delay="300">
+
+                              <!-- <img src="" class="img-fluid" alt="working girl"> -->
+                         </div>
+                    </div>
+
                </div>
+          </div>
      </section>
 
 
@@ -98,16 +111,22 @@ https://templatemo.com/tm-538-digital-trend
                     <div class="col-lg-7 mx-auto col-md-10 col-12">
                          <div class="about-info">
 
-                              <h2 class="mb-4" data-aos="fade-up">the best <strong>Digital Marketing agency</strong> in Rio de Janeiro</h2>
+                              <h2 class="mb-4" data-aos="fade-up">Quem Somos</h2>
 
-                              <p class="mb-0" data-aos="fade-up">Total 5 HTML pages are included in this template from TemplateMo website. Please check 2 <a href="blog.html">blog</a> pages, <a href="project-detail.html">project</a> page, and <a href="contact.html">contact</a> page. 
-                              <br><br>You are <strong>allowed</strong> to use this template for commercial or non-commercial purpose. You are NOT allowed to redistribute the template ZIP file on template collection websites.</p>
+                              <p class="mb-0" data-aos="fade-up">Total 5 HTML pages are included in this template from
+                                   TemplateMo website. Please check 2 <a href="blog.html">blog</a> pages, <a
+                                        href="project-detail.html">project</a> page, and <a
+                                        href="contact.html">contact</a> page.
+                                   <br><br>You are <strong>allowed</strong> to use this template for commercial or
+                                   non-commercial purpose. You are NOT allowed to redistribute the template ZIP file on
+                                   template collection websites.
+                              </p>
                          </div>
 
                          <div class="about-image" data-aos="fade-up" data-aos-delay="200">
 
-                          <img src="images/office.png" class="img-fluid" alt="office">
-                        </div>
+                              <img src="images/office.png" class="img-fluid" alt="office">
+                         </div>
                     </div>
 
                </div>
@@ -122,10 +141,10 @@ https://templatemo.com/tm-538-digital-trend
 
                     <div class="col-lg-12 col-12">
 
-                        <h2 class="mb-5 text-center" data-aos="fade-up">
-                            Please take a look through our
-                            <strong>featured Digital Trends</strong>
-                        </h2>
+                         <h2 class="mb-5 text-center" data-aos="fade-up">
+                              Please take a look through our
+                              <strong>featured Digital Trends</strong>
+                         </h2>
 
                          <div class="owl-carousel owl-theme" id="project-slide">
                               <div class="item project-wrapper" data-aos="fade-up" data-aos-delay="100">
@@ -216,26 +235,27 @@ https://templatemo.com/tm-538-digital-trend
                <div class="row">
 
                     <div class="col-lg-6 col-md-5 col-12">
-                        <div class="contact-image" data-aos="fade-up">
+                         <div class="contact-image" data-aos="fade-up">
 
-                          <img src="images/female-avatar.png" class="img-fluid" alt="website">
-                        </div>
+                              <img src="images/female-avatar.png" class="img-fluid" alt="website">
+                         </div>
                     </div>
 
                     <div class="col-lg-6 col-md-7 col-12">
-                      <h4 class="my-5 pt-3" data-aos="fade-up" data-aos-delay="100">Client Testimonials</h4>
+                         <h4 class="my-5 pt-3" data-aos="fade-up" data-aos-delay="100">Client Testimonials</h4>
 
-                      <div class="quote" data-aos="fade-up" data-aos-delay="200"></div>
+                         <div class="quote" data-aos="fade-up" data-aos-delay="200"></div>
 
-                      <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Lorem ipsum Sed eiusmod esse aliqua sed incididunt aliqua incididunt mollit id et sit proident dolor nulla sed commodo.</h2>
+                         <h2 class="mb-4" data-aos="fade-up" data-aos-delay="300">Lorem ipsum Sed eiusmod esse aliqua
+                              sed incididunt aliqua incididunt mollit id et sit proident dolor nulla sed commodo.</h2>
 
-                      <p data-aos="fade-up" data-aos-delay="400">
-                        <strong>Mary Zoe</strong>
+                         <p data-aos="fade-up" data-aos-delay="400">
+                              <strong>Mary Zoe</strong>
 
-                        <span class="mx-1">/</span>
+                              <span class="mx-1">/</span>
 
-                        <small>Digital Agency (CEO)</small>
-                      </p>
+                              <small>Digital Agency (CEO)</small>
+                         </p>
                     </div>
 
                </div>
@@ -243,66 +263,70 @@ https://templatemo.com/tm-538-digital-trend
      </section>
 
 
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row">
+     <footer class="site-footer">
+          <div class="container">
+               <div class="row">
 
-          <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
-            <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">We make creative <strong>brands</strong> only.</h1>
+                    <div class="col-lg-5 mx-lg-auto col-md-8 col-10">
+                         <h1 class="text-white" data-aos="fade-up" data-aos-delay="100">We make creative
+                              <strong>brands</strong> only.
+                         </h1>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
+                         <h4 class="my-4">Contact Info</h4>
+
+                         <p class="mb-1">
+                              <i class="fa fa-phone mr-2 footer-icon"></i>
+                              +99 080 070 4224
+                         </p>
+
+                         <p>
+                              <a href="#">
+                                   <i class="fa fa-envelope mr-2 footer-icon"></i>
+                                   hello@company.com
+                              </a>
+                         </p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="300">
+                         <h4 class="my-4">Our Studio</h4>
+
+                         <p class="mb-1">
+                              <i class="fa fa-home mr-2 footer-icon"></i>
+                              Av. Lúcio Costa - Barra da Tijuca, Rio de Janeiro - RJ, Brazil
+                         </p>
+                    </div>
+
+                    <div class="col-lg-4 mx-lg-auto text-center col-md-8 col-12" data-aos="fade-up"
+                         data-aos-delay="400">
+                         <p class="copyright-text">Copyright &copy; 2020 Your Company
+                              <br>
+                              <a rel="nofollow noopener" href="https://templatemo.com">Design: TemplateMo</a>
+                         </p>
+                    </div>
+
+                    <div class="col-lg-4 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
+
+                         <ul class="footer-link">
+                              <li><a href="#">Stories</a></li>
+                              <li><a href="#">Work with us</a></li>
+                              <li><a href="#">Privacy</a></li>
+                         </ul>
+                    </div>
+
+                    <div class="col-lg-3 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
+                         <ul class="social-icon">
+                              <li><a href="#" class="fa fa-instagram"></a></li>
+                              <li><a href="#" class="fa fa-twitter"></a></li>
+                              <li><a href="#" class="fa fa-dribbble"></a></li>
+                              <li><a href="#" class="fa fa-behance"></a></li>
+                         </ul>
+                    </div>
+
+               </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="200">
-            <h4 class="my-4">Contact Info</h4>
-
-            <p class="mb-1">
-              <i class="fa fa-phone mr-2 footer-icon"></i> 
-              +99 080 070 4224
-            </p>
-
-            <p>
-              <a href="#">
-                <i class="fa fa-envelope mr-2 footer-icon"></i>
-                hello@company.com
-              </a>
-            </p>
-          </div>
-
-          <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="300">
-            <h4 class="my-4">Our Studio</h4>
-
-            <p class="mb-1">
-              <i class="fa fa-home mr-2 footer-icon"></i> 
-              Av. Lúcio Costa - Barra da Tijuca, Rio de Janeiro - RJ, Brazil
-            </p>
-          </div>
-
-          <div class="col-lg-4 mx-lg-auto text-center col-md-8 col-12" data-aos="fade-up" data-aos-delay="400">
-            <p class="copyright-text">Copyright &copy; 2020 Your Company
-            <br>
-            <a rel="nofollow noopener" href="https://templatemo.com">Design: TemplateMo</a></p>
-          </div>
-
-          <div class="col-lg-4 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="500">
-            
-            <ul class="footer-link">
-              <li><a href="#">Stories</a></li>
-              <li><a href="#">Work with us</a></li>
-              <li><a href="#">Privacy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 mx-lg-auto col-md-6 col-12" data-aos="fade-up" data-aos-delay="600">
-            <ul class="social-icon">
-              <li><a href="#" class="fa fa-instagram"></a></li>
-              <li><a href="#" class="fa fa-twitter"></a></li>
-              <li><a href="#" class="fa fa-dribbble"></a></li>
-              <li><a href="#" class="fa fa-behance"></a></li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-    </footer>
+     </footer>
 
 
      <!-- SCRIPTS -->
@@ -314,4 +338,5 @@ https://templatemo.com/tm-538-digital-trend
      <script src="js/custom.js"></script>
 
 </body>
+
 </html>
